--- a/src/assets/scss/01-tools/fonts.scss
+++ b/src/assets/scss/01-tools/fonts.scss
@@ -12,7 +12,7 @@ $fonts: (
   $fontDisplay,
   $fontExtensions) {
 
-  @font-face {
+  @font-face { // stylelint-disable-line
     font-family: $fontFamily;
     font-weight: $fontWeight;
     font-style: $fontStyle;
