--- a/src/assets/scss/01-tools/svg.scss
+++ b/src/assets/scss/01-tools/svg.scss
@@ -13,7 +13,7 @@
     display: block;
     background: url($path) no-repeat;
     background-position: center;
-    background-size: 100%;
+    background-size: 100%; // stylelint-disable-line
     height: 100%;
   }
 }
