--- a/src/assets/scss/02-settings/type.scss
+++ b/src/assets/scss/02-settings/type.scss
@@ -1,16 +1,35 @@
-$m-font-size: 112.5%;
-$d-font-size: 225%;
+$fs-calc-mobile: calc(1px + 7vw); // stylelint-disable-line
+$fs-body-mobile: 1em;
+$fs-title: 1.333em;
+$fs-bigTitle: 1.777em;
+$fs-small: 0.75em;
+
+$regular-weight: 400;
+
+@mixin paragraph {
+  margin: 0 0 16px 0;
+  max-width: 12em;
+}
 
 html {
-  font-size: $d-font-size;
+  font-size: $fs-calc-mobile; // stylelint-disable-line
+  line-height: 1;
 }
 
 body {
   font-family: 'Space Grotesk', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  text-rendering: optimizeLegibility;
+  text-rendering: optimizeLegibility; // stylelint-disable-line
   color: $c-darkGrey;
-  text-transform: uppercase;
-  line-height: 1;
+  text-transform: uppercase; // stylelint-disable-line
+  font-weight: $regular-weight;
+}
+
+p {
+  @include paragraph;
+}
+
+a {
+  color: $c-darkGrey;
 }
