--- a/src/views/index.njk
+++ b/src/views/index.njk
@@ -3,16 +3,20 @@ title: Benjamin Dos Santos
 layout: base
 ---
 
-{% include 'header.njk' %}
+<div class="l-wrapper">
 
-<main>
+  {% include 'header.njk' %}
 
-  {% block content %}
+  <main>
 
-    {% include 'navigation.njk' %}
+    {% block content %}
 
-  {% endblock %}
+      {% include 'navigation.njk' %}
 
-</main>
+    {% endblock %}
 
-{% include 'footer.njk' %}
+  </main>
+
+  {% include 'footer.njk' %}
+
+</div>
