Update navigation/projects component

--- a/src/views/includes/navigation.njk
+++ b/src/views/includes/navigation.njk
@@ -1,10 +1,12 @@
-<nav class="l-navigation"">
-  <ul class="projects">
+<nav class="l-navigation">
+  <ul class="c-projects">
     {% for project in projects %}
-      <li class="projects__item">
-        <h2 class="o-title">{{ project.name }}</h2>
-        <p class="o-small">{{ project.description }}</p>
-        <span class="o-small">{{ project.date }}</span>
+      <li class="c-projects__item">
+        <h3 class="o-title"><a href="{{ project.url }}">{{ project.name }}</a></h3>
+        <div>
+          <p class="o-small">{{ project.description }}</p>
+          <span class="o-small">{{ project.date }}</span>
+        </div>
       </li>
     {% endfor %}
   </ul>
