--- a/src/assets/scss/03-objects/title.scss
+++ b/src/assets/scss/03-objects/title.scss
@@ -1,6 +1,6 @@
 .o-title {
   font-size: $fs-title;
-  font-weight: $regular-weight;
+  font-weight: $wght-regular;
   margin: 0 0 8px 0;
 
   &--big {
