Update header email

--- a/src/views/includes/header.njk
+++ b/src/views/includes/header.njk
@@ -2,7 +2,5 @@
   <h1 class="o-title o-title--big">{{ title }}</h1>
   <h2 class="o-text">I’m Digital Designer & Frontend Developer.</h2>
   <p>Freshly graduated in web & mobile design, i’m currently looking for a job.</p>
-  <a class="o-small" href="mailto:hello@benjamindossantos.be">
-    <span class="u-underline">hello</span>@<span class="u-underline">benjamindossantos.be</span>
-  </a>
+  <a class="o-small u-underline" href="mailto:hello@benjamindossantos.be">hello＠benjamindossantos.be</a>
 </header>
