--- a/src/assets/scss/04-components/socials.scss
+++ b/src/assets/scss/04-components/socials.scss
@@ -1,11 +1,11 @@
 .c-socials {
-  margin: 0 0 16px 0;
 
   &__item {
     list-style: none;
+    margin: $sp-xs 0 0 0;
 
-    &:not(:last-child) {
-      margin: 0 0 8px 0;
+    &:first-child {
+      margin: 0;
     }
   }
 }
