--- a/src/assets/scss/03-objects/title.scss
+++ b/src/assets/scss/03-objects/title.scss
@@ -1,11 +1,10 @@
 .o-title {
   font-size: $fs-title;
   font-weight: $wght-regular;
-  margin: 0 0 8px 0;
+  margin: 0;
 
   &--big {
     font-size: $fs-bigTitle;
-    margin: 0 0 16px 0;
     max-width: 6em;
   }
 }
