--- a/src/views/includes/header.njk
+++ b/src/views/includes/header.njk
@@ -1,6 +1,8 @@
-<header>
+<div class="c-header">
   <h1 class="o-title o-title--big">{{ title }}</h1>
-  <h2 class="o-text">I’m Digital Designer & Frontend Developer.</h2>
-  <p>Freshly graduated in web & mobile design, i’m currently looking for a job.</p>
-  <a class="o-small u-underline" href="mailto:hello@benjamindossantos.be">hello＠benjamindossantos.be</a>
-</header>
+  <div class="c-header__content">
+    <h2 class="o-text">I’m Digital Designer & Frontend Developer.</h2>
+    <p>Freshly graduated in web & mobile design, i’m currently looking for a job.</p>
+    <a class="o-small u-underline u-margin-s" href="mailto:hello@benjamindossantos.be">hello＠benjamindossantos.be</a>
+  </div>
+</div>
