--- a/src/views/includes/projects.njk
+++ b/src/views/includes/projects.njk
@@ -1,11 +1,11 @@
-<nav class="l-navigation">
-  <ul class="c-projects">
+<nav class="c-projects">
+  <ul>
     {% for project in projects %}
       <li class="c-projects__item">
         <h3 class="o-title"><a href="{{ project.url }}">{{ project.name }}</a></h3>
-        <div>
+        <div class="c-projects__description">
           <p class="o-small">{{ project.description }}</p>
-          <span class="o-small">{{ project.date }}</span>
+          <span class="o-small u-margin-xs">{{ project.date }}</span>
         </div>
       </li>
     {% endfor %}
