Update footer structure

--- a/src/views/includes/footer.njk
+++ b/src/views/includes/footer.njk
@@ -1,10 +1,10 @@
-<footer>
+<div class="c-footer" ">
   <ul class="c-socials">
     {% for social in socials %}
       <li class="c-socials__item">
-        <a class="o-small u-underline" href="{{ social.url }}">{{ social.name }}</a>
+        <a class="o-small u-underline" href="{{ social.url }}" target="_blank">{{ social.name }}</a>
       </li>
     {% endfor %}
   </ul>
-  <p class="o-small u-m0">Design &&nbsp;development →&nbsp;Benjamin Dos&nbsp;Santos</p>
-</footer>
+  <p class="o-small">Design &&nbsp;development →&nbsp;Benjamin Dos&nbsp;Santos</p>
+</div>
