--- a/src/views/includes/header.njk
+++ b/src/views/includes/header.njk
@@ -1,8 +1,8 @@
 <div class="c-header">
   <h1 class="o-title o-title--big">{{ title }}</h1>
   <div class="c-header__content">
-    <h2 class="o-text">I’m Digital Designer & Frontend Developer.</h2>
-    <p>Freshly graduated in web & mobile design, i’m currently looking for a job.</p>
+    <h2 class="o-text">I’m Digital Designer &amp;&nbsp;Frontend Developer.</h2>
+    <p>Freshly graduated in&nbsp;Web & Mobile Design, I’m&nbsp;currently looking for a&nbsp;job.</p>
     <a class="o-small u-underline u-margin-s" href="mailto:hello@benjamindossantos.be">hello＠benjamindossantos.be</a>
   </div>
 </div>
