--- a/src/assets/scss/03-objects/title.scss
+++ b/src/assets/scss/03-objects/title.scss
@@ -1,10 +1,15 @@
 .o-title {
-  font-size: $fs-title;
+  font-size: $fs-title-mobile;
   font-weight: $wght-regular;
   margin: 0;
+
+  @include media(m) {
+    font-size: $fs-title-tablet;
+  }
 
   &--big {
     font-size: $fs-bigTitle;
     max-width: 6em;
+    margin: 0 $sp-m $sp-s 0;
   }
 }
