--- a/src/assets/scss/04-components/projects.scss
+++ b/src/assets/scss/04-components/projects.scss
@@ -14,6 +14,9 @@
   }
 
   &__description {
+    display: flex;
+    align-items: flex-end;
+    flex-direction: column;
     margin: $sp-xs 0 0 0;
   }
 }
