--- a/src/views/includes/footer.njk
+++ b/src/views/includes/footer.njk
@@ -1,4 +1,4 @@
-<div class="c-footer" ">
+<div class="c-footer">
   <ul class="c-socials">
     {% for social in socials %}
       <li class="c-socials__item">
