Update responsive styles

--- a/src/assets/scss/02-settings/type.scss
+++ b/src/assets/scss/02-settings/type.scss
@@ -4,7 +4,7 @@ $fs-body-tablet: 200%;
 $fs-title-mobile: 1.333em;
 $fs-title-tablet: 10vw; // stylelint-disable-line
 $fs-bigTitle: 1.777em;
-$fs-small: 0.75em;
+$fs-small-mobile: 0.75em;
 
 $wght-regular: 400;
 
