--- a/src/assets/scss/03-objects/title.scss
+++ b/src/assets/scss/03-objects/title.scss
@@ -2,6 +2,7 @@
   font-size: $fs-title-mobile;
   font-weight: $wght-regular;
   margin: 0;
+  line-height: 0.9;
 
   @include media(m) {
     font-size: $fs-title-tablet;
