--- a/src/views/includes/header.njk
+++ b/src/views/includes/header.njk
@@ -1,8 +1,22 @@
-<div class="c-header">
-  <h1 class="o-title o-title--big">{{ title }}</h1>
-  <div class="c-header__content">
-    <h2 class="o-text">I’m Digital Designer &amp;&nbsp;Frontend Developer.</h2>
-    <p>Freshly graduated in&nbsp;Web & Mobile Design, I’m&nbsp;currently looking for a&nbsp;job.</p>
-    <a class="o-small u-underline u-margin-s" href="mailto:hello@benjamindossantos.be">hello＠benjamindossantos.be</a>
+<header class="c-header">
+  <div class="l-container">
+    <div class="c-header__wrapper">
+      <div class="c-header__banner">
+        <h1 class="o-title o-title--big">{{ title }}</h1>
+        <div>
+          <h2 class="o-text">I’m Digital Designer &amp;&nbsp;Frontend Developer.</h2>
+          <p>Freshly graduated in&nbsp;Web & Mobile Design, I’m&nbsp;currently looking for a&nbsp;job.</p>
+          <a class="o-small u-underline u-margin-s" href="mailto:hello@benjamindossantos.be">hello＠benjamindossantos.be</a>
+        </div>
+      </div>
+      {# <ul class="c-skip">
+        <li class="c-skip__item">
+          <a class="o-small" href="#main" aria-label="skip to content">Skip to content</a>
+        </li>
+        <li class="c-skip__item">
+          <a class="o-small" href="#main">↓ Scroll down</a>
+        </li>
+      </ul> #}
+    </div>
   </div>
-</div>
+</header>
