--- a/src/views/includes/projects.njk
+++ b/src/views/includes/projects.njk
@@ -1,13 +1,13 @@
-<nav class="c-projects">
-  <ul>
-    {% for project in projects %}
-      <li class="c-projects__item">
-        <h3 class="o-title"><a href="{{ project.url }}">{{ project.name }}</a></h3>
-        <div class="c-projects__description">
-          <p class="o-small">{{ project.description }}</p>
-          <span class="o-small u-margin-xs">{{ project.date }}</span>
-        </div>
-      </li>
-    {% endfor %}
-  </ul>
-</nav>
+<div class="c-projects">
+  {% for project in projects %}
+    <section class="c-projects__item js-project">
+      <h3 class="o-title">
+        <a href="{{ project.url }}">{{ project.name }}</a>
+      </h3>
+      <div class="c-projects__description">
+        <p class="o-small">{{ project.description }}</p>
+        <span class="o-small u-margin-xs">{{ project.date }}</span>
+      </div>
+    </section>
+  {% endfor %}
+</div>
