--- a/src/views/includes/header.njk
+++ b/src/views/includes/header.njk
@@ -2,7 +2,9 @@
   <div class="l-container">
     <div class="c-header__wrapper">
       <div class="c-header__banner">
-        <h1 class="o-title o-title--big">{{ title }}</h1>
+        <div class="c-header__title">
+          <h1 class="o-title o-title--main">{{ title }}</h1>
+        </div>
         <div>
           <h2 class="o-text">I’m Digital Designer &amp;&nbsp;Frontend Developer.</h2>
           <p>Freshly graduated in&nbsp;Web & Mobile Design, I’m&nbsp;currently looking for a&nbsp;job.</p>
