--- a/src/assets/scss/06-utilities/_underline.scss
+++ b/src/assets/scss/06-utilities/_underline.scss
@@ -2,12 +2,12 @@
   position: relative;
 
   &::after {
-    @include pseudoElement;
+    @include pseudo-element;
 
     width: 100%;
     height: 1px;
     bottom: 0;
     left: 0;
-    background-color: $c-darkGrey;
+    background-color: $c-dark-grey;
   }
 }
