--- a/src/views/includes/head.njk
+++ b/src/views/includes/head.njk
@@ -3,6 +3,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <link href="{{ '/assets/css/main.css' | getPath }}" rel="stylesheet">
+  <script>document.documentElement.className = 'js'</script>
   <script defer src="{{ '/assets/js/main.js' | getPath }}"></script>
   <title>{{ title }} — Digital Designer & Frontend Developer</title>
   <meta name="description" content="{{ description }}">
