--- a/src/views/includes/header.njk
+++ b/src/views/includes/header.njk
@@ -2,10 +2,10 @@
   <div class="l-container">
     <div class="c-header__wrapper">
       <div class="c-header__banner">
-        <div class="c-header__title">
+        <div class="c-header__title js-fade-in">
           <h1 class="o-title o-title--main">{{ title }}</h1>
         </div>
-        <div>
+        <div class="js-fade-in">
           <h2 class="o-text">I’m Digital Designer &amp;&nbsp;Frontend Developer.</h2>
           <p>Freshly graduated in&nbsp;Web & Mobile Design, I’m&nbsp;currently looking for a&nbsp;job.</p>
           <a class="o-small u-underline u-margin-s" href="mailto:hello@benjamindossantos.be">hello＠benjamindossantos.be</a>
