--- a/src/views/includes/footer.njk
+++ b/src/views/includes/footer.njk
@@ -8,7 +8,9 @@
           </li>
         {% endfor %}
       </ul>
-      <p class="o-small">Design &&nbsp;development →&nbsp;Benjamin Dos&nbsp;Santos</p>
+      <div class="c-footer__author">
+        <p class="o-small">Design &&nbsp;development →&nbsp;Benjamin Dos&nbsp;Santos</p>
+      </div>
     </div>
   </div>
 </footer>
