--- a/src/assets/scss/04-components/_socials.scss
+++ b/src/assets/scss/04-components/_socials.scss
@@ -1,9 +1,18 @@
 .c-socials {
+  margin: 0 $sp-m 0 0;
 
   &__item {
 
+    @include mq(l) {
+      display: inline-block;
+    }
+
     &:not(:first-child) {
       margin: $sp-xs 0 0 0;
+
+      @include mq(l) {
+        margin: 0 0 0 $sp-m;
+      }
     }
   }
 }
