--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,4 +1,5 @@
-// Sanitize CSS
+// @import '01-tools/**/fonts';
+
 @import '~sanitize.css/sanitize';
 @import '~sanitize.css/typography';
 @import '~sanitize.css/assets';
@@ -11,3 +12,4 @@
 @import '04-components/**/*';
 @import '05-layouts/**/*';
 @import '06-utilities/**/*';
+@import '07-js-hooks/**/*';
