--- a/src/views/includes/projects.njk
+++ b/src/views/includes/projects.njk
@@ -1,12 +1,14 @@
 <div class="c-projects">
   {% for project in projects %}
     <section class="c-projects__item js-project">
-      <h3 class="o-title o-title--project">
-        <a href="{{ project.url }}">{{ project.name }}</a>
-      </h3>
-      <div class="c-projects__description">
-        <p class="o-small">{{ project.description }}</p>
-        <span class="o-small">{{ project.date }}</span>
+      <div class="js-animation">
+        <h3 class="o-title o-title--project">
+          <a href="{{ project.url }}">{{ project.name }}</a>
+        </h3>
+        <div class="c-projects__description">
+          <p class="o-small">{{ project.description }}</p>
+          <span class="o-small">{{ project.date }}</span>
+        </div>
       </div>
     </section>
   {% endfor %}
