--- a/src/assets/scss/04-components/_footer.scss
+++ b/src/assets/scss/04-components/_footer.scss
@@ -1,28 +1,24 @@
 .c-footer {
+  margin: $sp-xl 0 0 0;
+
+  @include mq(m) {
+    margin: $sp-xxl 0 0 0;
+  }
 
   &__wrapper {
     padding: 0 0 $sp-s 0;
-    height: 40vh;
     display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-
-    @include mq(m) {
-      flex-direction: row;
-      align-items: flex-end;
-      justify-content: space-between;
-    }
+    align-items: flex-end;
+    justify-content: space-between;
+    flex-wrap: wrap;
   }
 
   &__author {
-    margin: $sp-s 0 0 0;
+    margin: $sp-m 0 0 0;
+    max-width: 9.2em;
 
     @include mq(m) {
       text-align: right;
-    }
-
-    .o-small {
-      width: 12em;
     }
   }
 }
