--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -12,4 +12,4 @@
 @import '04-components/**/*';
 @import '05-layouts/**/*';
 @import '06-utilities/**/*';
-@import '07-js-hooks/**/*';
+@import '07-animations/**/*';
