--- a/src/assets/scss/02-settings/_spacings.scss
+++ b/src/assets/scss/02-settings/_spacings.scss
@@ -1,12 +1,16 @@
-$sp-xs: 0.25rem;
-$sp-s: 0.5rem;
-$sp-m: 1rem;
-$sp-xm: 1.25rem;
-$sp-l: 2rem;
+$sp-xs: 0.25em;
+$sp-s: 0.5em;
+$sp-m: 1em;
+$sp-xm: 1.25em;
+$sp-l: 2em;
+$sp-xl: 3em;
+$sp-xxl: 5em;
 
 $spacings: (
   $sp-xs 'xs',
   $sp-s 's',
   $sp-m 'm',
-  $sp-l 'l'
+  $sp-l 'l',
+  $sp-xl 'xl',
+  $sp-xxl 'xxl'
 );
