--- a/src/assets/scss/04-components/_header.scss
+++ b/src/assets/scss/04-components/_header.scss
@@ -1,5 +1,4 @@
 .c-header {
-  height: 50vh;
 
   &__wrapper {
     padding: $sp-s 0 0 0;
@@ -7,12 +6,14 @@
 
   &__banner {
     display: flex;
-    justify-content: space-between;
     flex-wrap: wrap;
-    max-width: 28em;
   }
 
   &__title {
     margin: 0 0 $sp-s 0;
+  }
+
+  .o-small {
+    margin: $sp-m 0 0 0;
   }
 }
