--- a/src/views/includes/footer.njk
+++ b/src/views/includes/footer.njk
@@ -8,7 +8,7 @@
           </li>
         {% endfor %}
       </ul>
-      <div class="c-footer__author">
+      <div class="c-footer__author js-animation">
         <p class="o-small">Design &&nbsp;development →&nbsp;Benjamin Dos&nbsp;Santos</p>
       </div>
     </div>
