--- a/src/views/includes/projects.njk
+++ b/src/views/includes/projects.njk
@@ -1,15 +1,13 @@
 <div class="c-projects">
-  {% for project in projects %}
-    <section class="c-projects__item js-project">
-      <div class="js-animation">
-        <h3 class="o-title o-title--project">
-          <a href="{{ project.url }}">{{ project.name }}</a>
-        </h3>
-        <div class="c-projects__description">
-          <p class="o-small">{{ project.description }}</p>
-          <span class="o-small">{{ project.date }}</span>
-        </div>
-      </div>
-    </section>
-  {% endfor %}
+  <h3 class="c-projects__title">Projects&nbsp;↓</h3>
+  <div class="c-projects__list">
+    {% for project in projects %}
+      <section class="c-projects__item js-project">
+        <h2 class="o-title o-title--project" ">
+          <a class="js-spanify" href="{{ project.url }}">{{ project.name }}</a>
+        </h2>
+        <p class="o-small js-animation" data-animation="fade-in">{{ project.description }}</p>
+      </section>
+    {% endfor %}
+  </div>
 </div>
