--- a/src/assets/scss/03-objects/_title.scss
+++ b/src/assets/scss/03-objects/_title.scss
@@ -9,7 +9,11 @@
   }
 
   &--project {
-    font-size: $fs-project-title;
     margin: 0;
+    font-size: $fs-project-title;
+
+    @supports not (font-size: #{$fs-project-title}) { // stylelint-disable-line
+      font-size: $fs-main-title;
+    }
   }
 }
