--- a/src/assets/scss/04-components/_footer.scss
+++ b/src/assets/scss/04-components/_footer.scss
@@ -7,7 +7,7 @@
 
   &__wrapper {
     padding: 0 0 $sp-s 0;
-    display: flex;
+    display: flex; // stylelint-disable-line
     align-items: flex-end;
     justify-content: space-between;
     flex-wrap: wrap;
