--- a/src/views/includes/projects.njk
+++ b/src/views/includes/projects.njk
@@ -1,12 +1,14 @@
 <div class="c-projects">
-  <h3 class="c-projects__title">Projects&nbsp;↓</h3>
+  <h3 class="c-projects__title js-spanify">Projects&nbsp;↓</h3>
   <div class="c-projects__list">
     {% for project in projects %}
       <section class="c-projects__item js-project">
         <h2 class="o-title o-title--project" ">
           <a class="js-spanify" href="{{ project.url }}">{{ project.name }}</a>
         </h2>
-        <p class="o-small js-animation" data-animation="fade-in">{{ project.description }}</p>
+        <div class="c-projects__description">
+          <p class="o-small js-animation" data-animation="fadeIn">{{ project.description }}</p>
+        </div>
       </section>
     {% endfor %}
   </div>
