Remove unused styles

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,5 +1,3 @@
-// @import '01-tools/**/fonts';
-
 @import '~sanitize.css/sanitize';
 @import '~sanitize.css/typography';
 @import '~sanitize.css/assets';
@@ -13,3 +11,5 @@
 @import '05-layouts/**/*';
 @import '06-utilities/**/*';
 @import '07-animations/**/*';
+
+// TODO: Add skip to main content components.
