--- a/src/views/templates/base.njk
+++ b/src/views/templates/base.njk
@@ -11,7 +11,7 @@ robots: index, follow
   {% include 'head.njk' %}
 
   <body data-namespace="{{ namespace }}">
-    <div class="l-wrapper js-wrapper">
+    <div class="js-wrapper">
 
       {% include 'header.njk' %}
 
