--- a/src/views/includes/projects.njk
+++ b/src/views/includes/projects.njk
@@ -1,13 +1,13 @@
 <div class="c-projects">
-  <h3 class="c-projects__title js-spanify">Projects&nbsp;↓</h3>
+  <h3 class="c-projects__title">{% spanify 'Projects&nbsp;↓', 'fadeIn'  %}</h3>
   <div class="c-projects__list">
     {% for project in projects %}
       <section class="c-projects__item js-project">
         <h2 class="o-title o-title--project" ">
-          <a class="js-spanify" href="{{ project.url }}">{{ project.name }}</a>
+          <a href="{{ project.url }}">{% spanify project.name, 'translate' %}</a>
         </h2>
         <div class="c-projects__description">
-          <p class="o-small js-animation" data-animation="fadeIn">{{ project.description }}</p>
+          <p class="o-small">{% spanify project.description, 'fadeIn' %}</p>
         </div>
       </section>
     {% endfor %}
