--- a/src/views/includes/header.njk
+++ b/src/views/includes/header.njk
@@ -3,12 +3,12 @@
     <div class="c-header__wrapper">
       <div class="c-header__banner">
         <div class="c-header__title">
-          <h1 class="o-title o-title--main js-animation" data-animation="fade-in">{{ title }}</h1>
+          <h1 class="o-title o-title--main js-animation" data-animation="fadeIn">{{ title }}</h1>
         </div>
         <div>
-          <h2 class="o-text js-animation" data-animation="fade-in">I’m Digital Designer &amp;&nbsp;Frontend Developer.</h2>
-          <p class="js-animation" data-animation="fade-in">Freshly graduated in Web&nbsp;& Mobile Design, I’m&nbsp;currently looking for&nbsp;a job.</p>
-          <a class="o-small u-underline js-animation" data-animation="fade-in" href="mailto:hello@benjamindossantos.be">hello＠benjamindossantos.be</a>
+          <h2 class="o-text js-animation" data-animation="fadeIn">I’m Digital Designer &amp;&nbsp;Frontend Developer.</h2>
+          <p class="js-animation" data-animation="fadeIn">Freshly graduated in Web&nbsp;& Mobile Design, I’m&nbsp;currently looking for&nbsp;a job.</p>
+          <a class="o-small u-underline js-animation" data-animation="fadeIn" href="mailto:hello@benjamindossantos.be">hello＠benjamindossantos.be</a>
         </div>
       </div>
       {# <ul class="c-skip">
