--- a/src/views/includes/projects.njk
+++ b/src/views/includes/projects.njk
@@ -1,13 +1,16 @@
 <div class="c-projects">
-  <h3 class="c-projects__title">{% spanify 'Projects&nbsp;↓', 'fadeIn'  %}</h3>
+  <div class="c-projects__title">
+    <h3 class="o-text js-animation" data-animation="title">Projects</h3>
+    <span class="o-symbol o-symbol--after js-animation" data-animation="title" data-symbol="↓"></span>
+  </div>
   <div class="c-projects__list">
     {% for project in projects %}
       <section class="c-projects__item js-project">
         <h2 class="o-title o-title--project" ">
-          <a href="{{ project.url }}">{% spanify project.name, 'translate' %}</a>
+          <a href="{{ project.url }}">{% spanify project.name, 'bigTranslate' %}</a>
         </h2>
         <div class="c-projects__description">
-          <p class="o-small">{% spanify project.description, 'fadeIn' %}</p>
+          <p class="o-small">{% spanify project.description, 'smallTranslate' %}</p>
         </div>
       </section>
     {% endfor %}
