--- a/src/assets/scss/06-utilities/_underline.scss
+++ b/src/assets/scss/06-utilities/_underline.scss
@@ -1,13 +1,15 @@
+// TODO: Hover on underlined elements.
+
 .u-underline {
   position: relative;
 
   &::after {
-    @include pseudo-element;
-
     width: 100%;
     height: 1px;
     bottom: 0;
     left: 0;
     background-color: $c-dark-grey;
+
+    @include pseudo-element;
   }
 }
