--- a/src/assets/scss/04-components/_socials.scss
+++ b/src/assets/scss/04-components/_socials.scss
@@ -1,18 +1,18 @@
 .c-socials {
   margin: 0 $sp-m 0 0;
+}
 
-  &__item {
+.c-socials__item {
+
+  @include mq(l) {
+    display: inline-block;
+  }
+
+  &:not(:first-child) {
+    margin: $sp-s 0 0 0;
 
     @include mq(l) {
-      display: inline-block;
-    }
-
-    &:not(:first-child) {
-      margin: $sp-s 0 0 0;
-
-      @include mq(l) {
-        margin: 0 0 0 $sp-m;
-      }
+      margin: 0 0 0 $sp-m;
     }
   }
 }
