--- a/src/views/includes/projects.njk
+++ b/src/views/includes/projects.njk
@@ -6,7 +6,7 @@
   <div class="c-projects__list">
     {% for project in projects %}
       <section class="c-projects__item js-project">
-        <h2 class="o-title o-title--project" ">
+        <h2 class="o-title o-title--project">
           <a href="{{ project.url }}">{% spanify project.name, 'bigTranslate' %}</a>
         </h2>
         <div class="c-projects__description">
