--- a/src/views/includes/head.njk
+++ b/src/views/includes/head.njk
@@ -7,5 +7,5 @@
   <script defer src="{{ '/assets/js/main.js' | getPath }}"></script>
   <title>{{ title }} — Digital Designer & Frontend Developer</title>
   <meta name="description" content="{{ description }}">
-  <link rel="icon" href="/favicon.png">
+  <link rel="icon" href="/favicon.svg">
 </head>
