--- a/src/assets/scss/06-utilities/_underline.scss
+++ b/src/assets/scss/06-utilities/_underline.scss
@@ -1,5 +1,3 @@
-// TODO: Hover on underlined elements.
-
 .u-underline {
   position: relative;
 
@@ -11,5 +9,16 @@
     background-color: $c-dark-grey;
 
     @include pseudo-element;
+
+    @include mq(':h') {
+      visibility: hidden;
+    }
+  }
+
+  &:hover {
+
+    &::after {
+      visibility: visible;
+    }
   }
 }
