--- a/src/views/includes/footer.njk
+++ b/src/views/includes/footer.njk
@@ -4,7 +4,7 @@
       <ul class="c-socials">
         {% for social in socials %}
           <li class="c-socials__item js-animation" data-animation="fadeIn">
-            <a class="o-small u-underline" href="{{ social.url }}" target="_blank">{{ social.name }}</a>
+            <a class="o-small u-underline js-link" href="{{ social.url }}" target="_blank">{{ social.name }}</a>
           </li>
         {% endfor %}
       </ul>
