--- a/src/views/includes/header.njk
+++ b/src/views/includes/header.njk
@@ -8,7 +8,7 @@
         <div>
           <h2 class="o-text js-animation" data-animation="fadeIn">I’m Digital Designer &amp;&nbsp;Frontend Developer.</h2>
           <p class="js-animation" data-animation="fadeIn">Freshly graduated in Web&nbsp;& Mobile Design, I’m&nbsp;currently looking for&nbsp;a job.</p>
-          <a class="o-small u-underline js-animation" data-animation="fadeIn" href="mailto:hello@benjamindossantos.be">hello＠benjamindossantos.be</a>
+          <a class="o-small u-underline js-link js-animation" data-animation="fadeIn" href="mailto:hello@benjamindossantos.be">hello＠benjamindossantos.be</a>
         </div>
       </div>
       {# <ul class="c-skip">
