--- a/src/views/includes/projects.njk
+++ b/src/views/includes/projects.njk
@@ -6,12 +6,12 @@
   <div class="c-projects__list">
     {% for project in projects %}
       <section class="c-projects__item js-project">
-        <h2 class="o-title o-title--project">
-          <a href="{{ project.url }}">{% spanify project.name, 'bigTranslate' %}</a>
-        </h2>
-        <div class="c-projects__description">
-          <p class="o-small">{% spanify project.description, 'smallTranslate' %}</p>
-        </div>
+        <a class="js-link" href="{{ project.url }}">
+          <h2 class="o-title o-title--project">{% spanify project.name, 'bigTranslate' %}</h2>
+          <div class="c-projects__description">
+            <p class="o-small">{% spanify project.description, 'smallTranslate' %}</p>
+          </div>
+        </a>
       </section>
     {% endfor %}
   </div>
