--- a/src/views/includes/projects.njk
+++ b/src/views/includes/projects.njk
@@ -1,13 +1,13 @@
 <div class="c-projects">
   <div class="c-projects__title">
-    <h3 class="o-text js-animation" data-animation="title">Projects</h3>
+    <h2 class="o-text js-animation" data-animation="title">Projects</h2>
     <span class="o-symbol o-symbol--after js-animation" data-animation="title" data-symbol="↓"></span>
   </div>
   <div class="c-projects__list">
     {% for project in projects %}
       <section class="c-projects__item js-project">
-        <a class="js-link" href="{{ project.url }}">
-          <h2 class="o-title o-title--project">{% spanify project.name, 'bigTranslate' %}</h2>
+        <a class="c-projects__link js-link" href="{{ project.url }}">
+          <h3 class="o-title o-title--project">{% spanify project.name, 'bigTranslate' %}</h3>
           <div class="c-projects__description">
             <p class="o-small">{% spanify project.description, 'smallTranslate' %}</p>
           </div>
