Fix font-face at the top of stylesheet

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,15 +1,16 @@
+// Load tools and put `@font-face` at the top.
+@import '01-tools/**/*';
+
+// Sanitize CSS.
 @import '~sanitize.css/sanitize';
 @import '~sanitize.css/typography';
 @import '~sanitize.css/assets';
 @import '~sanitize.css/reduce-motion';
 
-// Custom Files
-@import '01-tools/**/*';
+// Custom style.
 @import '02-settings/**/*';
 @import '03-objects/**/*';
 @import '04-components/**/*';
 @import '05-layouts/**/*';
 @import '06-utilities/**/*';
 @import '07-animations/**/*';
-
-// TODO: Add skip to main content components.
